// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extend integration (eval -> toString) > extend-chaining.less AST shape: same nodes and selector shapes as parsed (start through @media (tv)) 1`] = `
"(Rules
  [
    (Comment '//very simple chaining')
    (Ruleset
      selector: 
        (BasicSelector '.a')
      rules: 
        (Rules
          [
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Color
                  node: 'black'
                  rgb:
                    [0, 0, 0]
                  alpha: 1
                )
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.b')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.a')
              flag: 1
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.c')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.b')
              flag: 1
            )
          ]
        )
    )
    (Comment '//very simple chaining, ordering not important')
    (Ruleset
      selector: 
        (BasicSelector '.d')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.e')
              flag: 1
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.e')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.f')
              flag: 1
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.f')
      rules: 
        (Rules
          [
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Color
                  node: 'black'
                  rgb:
                    [0, 0, 0]
                  alpha: 1
                )
            )
          ]
        )
    )
    (Comment '//extend with all')
    (Ruleset
      selector: 
        (CompoundSelector
          [
            (BasicSelector '.g')
            (BasicSelector '.h')
          ]
        )
      rules: 
        (Rules
          [
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Color
                  node: 'black'
                  rgb:
                    [0, 0, 0]
                  alpha: 1
                )
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (CompoundSelector
          [
            (BasicSelector '.i')
            (BasicSelector '.j')
          ]
        )
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.g')
              flag: 0
            )
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Any 'inherit')
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.k')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.i')
              flag: 0
            )
          ]
        )
    )
    (Comment '//extend multi-chaining')
    (Ruleset
      selector: 
        (BasicSelector '.l')
      rules: 
        (Rules
          [
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Color
                  node: 'black'
                  rgb:
                    [0, 0, 0]
                  alpha: 1
                )
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.m')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.l')
              flag: 1
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.n')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.m')
              flag: 1
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.o')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.n')
              flag: 1
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.p')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.o')
              flag: 1
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.q')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.p')
              flag: 1
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.r')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.q')
              flag: 1
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.s')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.r')
              flag: 1
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.t')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.s')
              flag: 1
            )
          ]
        )
    )
    (Comment '// self referencing is ignored')
    (Ruleset
      selector: 
        (BasicSelector '.u')
      rules: 
        (Rules
          [
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Color
                  node: 'black'
                  rgb:
                    [0, 0, 0]
                  alpha: 1
                )
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (CompoundSelector
          [
            (BasicSelector '.v')
            (BasicSelector '.u')
            (BasicSelector '.v')
          ]
        )
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.u')
              flag: 0
            )
          ]
        )
    )
    (Comment '// circular reference because the new extend product will match the existing extend')
    (Ruleset
      selector: 
        (BasicSelector '.w')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.w')
              flag: 1
            )
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Color
                  node: 'black'
                  rgb:
                    [0, 0, 0]
                  alpha: 1
                )
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (CompoundSelector
          [
            (BasicSelector '.v')
            (BasicSelector '.w')
            (BasicSelector '.v')
          ]
        )
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.w')
              flag: 0
            )
          ]
        )
    )
    (Comment '// classic circular references')
    (Ruleset
      selector: 
        (BasicSelector '.x')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.z')
              flag: 1
            )
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Any 'x')
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.y')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.x')
              flag: 1
            )
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Any 'y')
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.z')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.y')
              flag: 1
            )
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Any 'z')
            )
          ]
        )
    )
    (Comment '//very simple chaining, but with the extend inside the ruleset')
    (Ruleset
      selector: 
        (BasicSelector '.va')
      rules: 
        (Rules
          [
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Color
                  node: 'black'
                  rgb:
                    [0, 0, 0]
                  alpha: 1
                )
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.vb')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.va')
              flag: 1
            )
            (Nil)
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Any 'inherit')
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.vc')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.vb')
              flag: 1
            )
            (Nil)
          ]
        )
    )
    (Comment '// media queries - don\\'t extend outside, do extend inside')
    (AtRule
      name: 
        (Any '@media')
      prelude: 
        (Paren
          (QueryCondition
            [
              (Keyword [role=keyword] 'tv')
            ]
          )
        )
      rules: 
        (Rules
          [
            (Ruleset
              selector: 
                (BasicSelector '.ma')
              rules: 
                (Rules
                  [
                    (Extend
                      target: 
                        (SelectorList
                          [
                            (BasicSelector '.a')
                            (BasicSelector '.b')
                            (BasicSelector '.c')
                            (BasicSelector '.d')
                            (BasicSelector '.e')
                            (BasicSelector '.f')
                            (BasicSelector '.g')
                            (BasicSelector '.h')
                            (BasicSelector '.i')
                            (BasicSelector '.j')
                            (BasicSelector '.k')
                            (BasicSelector '.l')
                            (BasicSelector '.m')
                            (BasicSelector '.n')
                            (BasicSelector '.o')
                            (BasicSelector '.p')
                            (BasicSelector '.q')
                            (BasicSelector '.r')
                            (BasicSelector '.s')
                            (BasicSelector '.t')
                            (BasicSelector '.u')
                            (BasicSelector '.v')
                            (BasicSelector '.w')
                            (BasicSelector '.x')
                            (BasicSelector '.y')
                            (BasicSelector '.z')
                            (BasicSelector '.md')
                          ]
                        )
                      flag: 1
                    )
                    (Declaration
                      name: 
                        (Any [role=property] 'color')
                      value: 
                        (Color
                          node: 'black'
                          rgb:
                            [0, 0, 0]
                          alpha: 1
                        )
                    )
                  ]
                )
            )
            (Ruleset
              selector: 
                (BasicSelector '.md')
              rules: 
                (Rules
                  [
                    (Declaration
                      name: 
                        (Any [role=property] 'color')
                      value: 
                        (Any 'inherit')
                    )
                  ]
                )
            )
            (AtRule
              name: 
                (Any '@media')
              prelude: 
                (Paren
                  (QueryCondition
                    [
                      (Keyword [role=keyword] 'plasma')
                    ]
                  )
                )
              rules: 
                (Rules
                  [
                    (Rules
                      [
                        (Extend
                          selector: 
                            (SelectorList
                              [
                                (BasicSelector '.me')
                                (BasicSelector '.mf')
                              ]
                            )
                          target: 
                            (SelectorList
                              [
                                (BasicSelector '.mb')
                                (BasicSelector '.md')
                              ]
                            )
                          flag: 1
                        )
                        (Ruleset
                          selector: 
                            (SelectorList
                              [
                                (BasicSelector '.me')
                                (BasicSelector '.mf')
                              ]
                            )
                          rules: 
                            (Rules
                              [
                                (Nil)
                                (Declaration
                                  name: 
                                    (Any [role=property] 'background')
                                  value: 
                                    (Color
                                      node: 'red'
                                      rgb:
                                        [255, 0, 0]
                                      alpha: 1
                                    )
                                )
                              ]
                            )
                        )
                      ]
                    )
                  ]
                )
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.mb')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.ma')
              flag: 1
            )
          ]
        )
    )
    (Ruleset
      selector: 
        (BasicSelector '.mc')
      rules: 
        (Rules
          [
            (Extend
              target: 
                (BasicSelector '.mb')
              flag: 1
            )
          ]
        )
    )
  ]
)"
`;

exports[`extend integration (eval -> toString) > extend-chaining.less AST shape: same nodes and selector shapes as parsed (start through @media (tv)) 2`] = `
"(Rules
  [
    (Comment '//very simple chaining')
    (Ruleset
      selector: 
        (BasicSelector '.a')
      rules: 
        (Rules
          [
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Color
                  node: 'black'
                  rgb:
                    [0, 0, 0]
                  alpha: 1
                )
              valueEdge: {}
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.a')
      parentEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.b')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.b')
      parentEdges: {}
      stateEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.c')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
          ]
        )
      parentEdges: {}
      stateEdges: {}
    )
    (Comment '//very simple chaining, ordering not important')
    (Ruleset
      selector: 
        (BasicSelector '.d')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
          ]
        )
      parentEdges: {}
      stateEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.e')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.e')
      parentEdges: {}
      stateEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.f')
      rules: 
        (Rules
          [
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Color
                  node: 'black'
                  rgb:
                    [0, 0, 0]
                  alpha: 1
                )
              valueEdge: {}
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.f')
      parentEdges: {}
    )
    (Comment '//extend with all')
    (Ruleset
      selector: 
        (CompoundSelector
          [
            (BasicSelector '.g')
            (BasicSelector '.h')
          ]
        )
      rules: 
        (Rules
          [
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Color
                  node: 'black'
                  rgb:
                    [0, 0, 0]
                  alpha: 1
                )
              valueEdge: {}
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (CompoundSelector
          [
            (BasicSelector '.g')
            (BasicSelector '.h')
          ]
        )
      parentEdges: {}
    )
    (Ruleset
      selector: 
        (CompoundSelector
          [
            (BasicSelector '.i')
            (BasicSelector '.j')
          ]
        )
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Any 'inherit')
              valueEdge: {}
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (CompoundSelector
          [
            (BasicSelector '.i')
            (BasicSelector '.j')
          ]
        )
      parentEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.k')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
          ]
        )
      parentEdges: {}
      stateEdges: {}
    )
    (Comment '//extend multi-chaining')
    (Ruleset
      selector: 
        (BasicSelector '.l')
      rules: 
        (Rules
          [
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Color
                  node: 'black'
                  rgb:
                    [0, 0, 0]
                  alpha: 1
                )
              valueEdge: {}
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.l')
      parentEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.m')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.m')
      parentEdges: {}
      stateEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.n')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.n')
      parentEdges: {}
      stateEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.o')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.o')
      parentEdges: {}
      stateEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.p')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.p')
      parentEdges: {}
      stateEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.q')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.q')
      parentEdges: {}
      stateEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.r')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.r')
      parentEdges: {}
      stateEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.s')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.s')
      parentEdges: {}
      stateEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.t')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
          ]
        )
      parentEdges: {}
      stateEdges: {}
    )
    (Comment '// self referencing is ignored')
    (Ruleset
      selector: 
        (BasicSelector '.u')
      rules: 
        (Rules
          [
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Color
                  node: 'black'
                  rgb:
                    [0, 0, 0]
                  alpha: 1
                )
              valueEdge: {}
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.u')
      parentEdges: {}
    )
    (Ruleset
      selector: 
        (CompoundSelector
          [
            (BasicSelector '.v')
            (BasicSelector '.u')
            (BasicSelector '.v')
          ]
        )
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (CompoundSelector
          [
            (BasicSelector '.v')
            (BasicSelector '.u')
            (BasicSelector '.v')
          ]
        )
      parentEdges: {}
      stateEdges: {}
    )
    (Comment '// circular reference because the new extend product will match the existing extend')
    (Ruleset
      selector: 
        (BasicSelector '.w')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Color
                  node: 'black'
                  rgb:
                    [0, 0, 0]
                  alpha: 1
                )
              valueEdge: {}
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.w')
      parentEdges: {}
    )
    (Ruleset
      selector: 
        (CompoundSelector
          [
            (BasicSelector '.v')
            (BasicSelector '.w')
            (BasicSelector '.v')
          ]
        )
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (CompoundSelector
          [
            (BasicSelector '.v')
            (BasicSelector '.w')
            (BasicSelector '.v')
          ]
        )
      parentEdges: {}
      stateEdges: {}
    )
    (Comment '// classic circular references')
    (Ruleset
      selector: 
        (BasicSelector '.x')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Any 'x')
              valueEdge: {}
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.x')
      parentEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.y')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Any 'y')
              valueEdge: {}
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.y')
      parentEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.z')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Any 'z')
              valueEdge: {}
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.z')
      parentEdges: {}
    )
    (Comment '//very simple chaining, but with the extend inside the ruleset')
    (Ruleset
      selector: 
        (BasicSelector '.va')
      rules: 
        (Rules
          [
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Color
                  node: 'black'
                  rgb:
                    [0, 0, 0]
                  alpha: 1
                )
              valueEdge: {}
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.va')
      parentEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.vb')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
            (Nil
              parentEdges: {}
            )
            (Declaration
              name: 
                (Any [role=property] 'color')
              value: 
                (Any 'inherit')
              valueEdge: {}
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.vb')
      parentEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.vc')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
            (Nil
              parentEdges: {}
            )
          ]
        )
      parentEdges: {}
      stateEdges: {}
    )
    (Comment '// media queries - don\\'t extend outside, do extend inside')
    (AtRule
      name: 
        (Any '@media')
      prelude: 
        (Paren
          (QueryCondition
            [
              (Keyword [role=keyword] 'tv')
            ]
          )
        )
      rules: 
        (Rules
          [
            (Ruleset
              selector: 
                (BasicSelector '.ma')
              rules: 
                (Rules
                  [
                    (Nil
                      parentEdges: {}
                    )
                    (Declaration
                      name: 
                        (Any [role=property] 'color')
                      value: 
                        (Color
                          node: 'black'
                          rgb:
                            [0, 0, 0]
                          alpha: 1
                        )
                      valueEdge: {}
                      parentEdges: {}
                    )
                  ]
                )
              parentEdges: {}
              selectorBeforeExtendEdge: {}
              stateEdges: {}
            )
            (Ruleset
              selector: 
                (BasicSelector '.md')
              rules: 
                (Rules
                  [
                    (Declaration
                      name: 
                        (Any [role=property] 'color')
                      value: 
                        (Any 'inherit')
                      valueEdge: {}
                      parentEdges: {}
                    )
                  ]
                )
              parentEdges: {}
              selectorBeforeExtendEdge: {}
              stateEdges: {}
            )
            (AtRule
              name: 
                (Any '@media')
              prelude: 
                (Paren
                  (QueryCondition
                    [
                      (Keyword [role=keyword] 'plasma')
                    ]
                  )
                )
              rules: 
                (Rules
                  [
                    (Rules
                      [
                        (Extend
                          selector: 
                            (SelectorList
                              [
                                (BasicSelector '.me')
                                (BasicSelector '.mf')
                              ]
                            )
                          target: 
                            (SelectorList
                              [
                                (BasicSelector '.mb')
                                (BasicSelector '.md')
                              ]
                            )
                          flag: 1
                        )
                        (Ruleset
                          selector: 
                            (SelectorList
                              [
                                (BasicSelector '.me')
                                (BasicSelector '.mf')
                              ]
                            )
                          rules: 
                            (Rules
                              [
                                (Nil)
                                (Declaration
                                  name: 
                                    (Any [role=property] 'background')
                                  value: 
                                    (Color
                                      node: 'red'
                                      rgb:
                                        [255, 0, 0]
                                      alpha: 1
                                    )
                                )
                              ]
                            )
                        )
                      ]
                    )
                  ]
                )
              parentEdges: {}
            )
          ]
        )
      parentEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.mb')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
          ]
        )
      selectorBeforeExtend: 
        (BasicSelector '.mb')
      parentEdges: {}
      stateEdges: {}
    )
    (Ruleset
      selector: 
        (BasicSelector '.mc')
      rules: 
        (Rules
          [
            (Nil
              parentEdges: {}
            )
          ]
        )
      parentEdges: {}
      stateEdges: {}
    )
  ]
)"
`;
